name:                app-base
version:             0.1.0.0
synopsis:            Basic scaffold code.
description:         Basic scaffold code.
homepage:            http://github.com/seanparsons/app-base#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Parsons
maintainer:          github@futurenotfound.com
copyright:           2015 Sean Parsons
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Entities
  ghc-options:         -ddump-splices
  build-depends:       base >= 4.7 && < 5
                     , wiring
                     , glue
                     , mtl
                     , monad-control
                     , transformers
                     , text
                     , template-haskell
                     , lens
                     , postgresql-simple
                     , unordered-containers
  default-language:    Haskell2010

test-suite app-base-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , app-base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/seanparsons/app-base
